@@ -10,7 +10,7 @@ To do ASAP!
 - Better error message when trying to open an input device but there is
   none on the system. Automatic deactivation of duplex mode if no input.
 
-- HRTF: Vertical interpolation causes too much phase cancellation.
+- Binary installer with jack support for MacOS.
 
 This is a list of features/fixes to implement for future releases
 =================================================================
