@@ -2112,6 +2112,7 @@ init_pyo64(void)
     module_add_object(m, "HRTFSpatter_base", &HRTFSpatterType);
     module_add_object(m, "HRTF_base", &HRTFType);
     module_add_object(m, "Expand_base", &ExpandType);
+    module_add_object(m, "RMS_base", &RMSType);
 
     PyModule_AddStringConstant(m, "PYO_VERSION", PYO_VERSION);
 #ifdef COMPILE_EXTERNALS
